# api/request/request_class.py
@@ -1,16 +1,11 @@
-from fastapi import File
 from pydantic import BaseModel
 
 
-class Status(BaseModel):
-    uuid: str
+class PredictComments(BaseModel):
+    number: int
+    comment: str
 
 
 class Start(BaseModel):
     userID: int
-    nameFile: str
-    comments: list
-
-
-class Result(BaseModel):
-    uuid: str
+    comments: list[PredictComments]
