# api/request/request_train_class.py
@@ -2,13 +2,19 @@ from fastapi import File
 from pydantic import BaseModel
 
 
+class TrainComments(BaseModel):
+    number: int
+    comment: str
+    class_comment: int
+
+
 class RequestTrainStatus(BaseModel):
     uuid: str
 
 
 class RequestTrain(BaseModel):
     userID: int
-    file: list
+    comments: list[TrainComments]
 
 
 class RequestTrainResult(BaseModel):
